# open5066

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  coverage.yml  security.yml  test.yml
docs/: C17_OPTIMIZATION_ANALYSIS.md  CMAKE_MIGRATION.md  CONTRIBUTING.md  GITHUB_ISSUES.md  GPL_COMPLIANCE.md  ISSUES_TRACKER.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  TEST_COVERAGE.md  TEST_SUMMARY.md
scripts/: create_issues.sh  generate_license.sh
src/core/: s5066d.c
src/include/: myconfig.h  s5066.h
src/protocols/: dts.c  http.c  sis.c
src/tools/: iocat.c
tests/: CMakeLists.txt  Makefile
tests/integration/: test_protocol_integration.sh
tests/security/: test_protocol_security  test_protocol_security.c
tests/unit/: test_crc_simple.c  test_dts_arq.c  test_dts_crc.c  test_dts_protocol.c  test_io_read.c  test_io_write.c  test_pdu_lifecycle.c  test_protocol_basics.c  test_segment_assembly.c  test_sis_protocol.c  test_string_safety  test_string_safety.c  test_util  test_util.c
